--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "expo-image-picker": "~13.1.1",
     "expo-status-bar": "~1.3.0",
     "firebase": "^8.10.1",
+    "moment": "^2.29.3",
     "prop-types": "^15.8.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
